# ChangeLog for dev-games/openscenegraph
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-games/openscenegraph/ChangeLog,v 1.22 2010/03/11 15:08:10 ssuominen Exp $

  11 Mar 2010; Samuli Suominen <ssuominen@gentoo.org>
  openscenegraph-2.8.2.ebuild, +files/openscenegraph-2.8.2-libpng14.patch:
  Fix building with libpng14 wrt #307695 by Lars Wendler.

  10 Feb 2010; Samuli Suominen <ssuominen@gentoo.org>
  openscenegraph-2.8.2.ebuild:
  Fix poppler depend.

  10 Feb 2010; Joseph Jezak <josejx@gentoo.org> openscenegraph-2.8.2.ebuild:
  Marked ppc stable for bug #296257.

  28 Dec 2009; Markus Meier <maekke@gentoo.org> openscenegraph-2.8.2.ebuild:
  amd64 stable, bug #296257

  28 Dec 2009; Raúl Porcel <armin76@gentoo.org>
  openscenegraph-2.8.2.ebuild:
  sparc stable wrt #296257

  09 Dec 2009; Christian Faulhammer <fauli@gentoo.org>
  openscenegraph-2.8.2.ebuild:
  stable x86, bug 296257

*openscenegraph-2.8.2 (12 Oct 2009)

  12 Oct 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  +openscenegraph-2.8.2.ebuild:
  [QA] version bump. Makre src_configure play nicely with cmake-utils. Acked
  by Mr_Bones_

  10 Jul 2009; Michael Sterrett <mr_bones_@gentoo.org>
  openscenegraph-2.8.0.ebuild:
  specifically needs net-libs/xulrunner:1.8 (reported by nirbheek)

  14 Apr 2009; Tristan Heaven <nyhm@gentoo.org> metadata.xml,
  openscenegraph-2.8.0.ebuild:
  Rename freetype USE flag to truetype

  10 Apr 2009; Peter Alfredsen <loki_val@gentoo.org>
  openscenegraph-2.8.0.ebuild:
  Updating dev-games/openscenegraph for virtual/poppler-glib update; cairo
  is the superior backend, always enable it anywhere it can be used.

  30 Mar 2009; Peter Alfredsen <loki_val@gentoo.org>
  openscenegraph-2.8.0.ebuild:
  Update dependencies w.r.t. bug 264230, fully-split-out poppler transition.

  20 Mar 2009; Joseph Jezak <josejx@gentoo.org> openscenegraph-2.8.0.ebuild:
  Marked ~ppc for bug #260342.
