@@ -1,6 +1,10 @@
 # ChangeLog for dev-games/openscenegraph
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-games/openscenegraph/ChangeLog,v 1.22 2010/03/11 15:08:10 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-games/openscenegraph/ChangeLog,v 1.23 2010/06/25 11:57:20 tupone Exp $
+
+  25 Jun 2010; Tupone Alfredo <tupone@gentoo.org>
+  openscenegraph-2.8.2.ebuild:
+  xulrunner dependency removed. Bug #324953 by nirbheek@gentoo.org
 
   11 Mar 2010; Samuli Suominen <ssuominen@gentoo.org>
   openscenegraph-2.8.2.ebuild, +files/openscenegraph-2.8.2-libpng14.patch:
